fix styles visibility

--- a/src/styles/components/_Create.scss
+++ b/src/styles/components/_Create.scss
@@ -94,9 +94,8 @@
        margin: 0px 50px;
        padding:0 10px;
        border-radius:5px;
-       margin:10px;
        align-items: center;
-         
+    
     }
 
 
@@ -105,7 +104,7 @@
     margin-left: 20px;
     padding: 0 15px;
     font-size: 22px;
-    border-radius: 10px;
+  
 }
 
 .deleteBtn{
@@ -114,13 +113,25 @@
 }
 
 
-@media (max-width: 768px) {
+
+
+@media (max-width: 950px) {
+    .section-create {
+      grid-template-columns: repeat(2, 300px);
+    }
+  }
+  
+  @media (max-width: 768px) {
     .createPokemon{
-
-
-        margin-top: 250px;
-
+  
+       margin-top: 250px;
+  
     }
 
-
 }
+  
+  @media (max-width: 620px) {
+    .section-create {
+      grid-template-columns: repeat(1, 300px);
+    }
+  }
