--- a/src/styles/components/_Nav.scss
+++ b/src/styles/components/_Nav.scss
@@ -9,6 +9,7 @@ nav{
    
 }
 
+
 .nav-bar>ul>li>img{
     width: 25%;
 }
@@ -29,7 +30,13 @@ nav{
          color: white;
          padding-left: 30px;
          padding-right: 30px;
+         border-radius: 5px;
         }
+
+        &>li>a:hover {
+            background-color: $yellow ;
+            color: black;
+            }
     }
 
     @media (max-width: 768px) {
