--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -4,6 +4,7 @@ $orange: #ff5722;
 $lila: #a4a3db;
 $blue:#3f51b5;
 $green: #8bc34a;
+$yellow: rgb(255,247,168);
 
 
 
